k8s/guardians/monitoring/__namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    vault-injection: enabled
