k8s/guardians/monitoring/influxdb.yml
---
apiVersion: v1
kind: Service
metadata:
  labels: &labels
    app.kubernetes.io/instance: influxdb
    app.kubernetes.io/name: influxdb
  name: influxdb
  namespace: monitoring
spec:
  clusterIP: None
  ports:
  - name: api
    port: 8086
    targetPort: 8086
  - name: rpc
    port: 8088
    targetPort: 8088
  selector:
    <<: *labels

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb
  namespace: monitoring
  labels: &labels
    app.kubernetes.io/instance: influxdb
    app.kubernetes.io/name: influxdb
  annotations:
    fluxcd.io/tag.influxdb: regexp:^1\.\d+\.\d+-alpine$
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  serviceName: influxdb
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      containers:
      - image: influxdb:1.7.8-alpine
        livenessProbe:
          httpGet:
            path: /ping
            port: api
          initialDelaySeconds: 30
          timeoutSeconds: 5
        name: influxdb
        ports:
        - containerPort: 8086
          name: api
        readinessProbe:
          httpGet:
            path: /ping
            port: api
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/influxdb
          name: data
        - mountPath: /etc/influxdb
          name: config
      volumes:
      - configMap:
          name: influxdb
        name: config
  volumeClaimTemplates:
  - metadata:
      name: data
      labels:
        <<: *labels
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 20Gi
