k8s/guardians/monitoring/loki.yml
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: monitoring
  labels: &labels
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: loki
  annotations:
    prometheus.io/port: http-metrics
    prometheus.io/scrape: "true"
spec:
  clusterIP: None
  ports:
    - name: http-metrics
      port: 3100
      targetPort: http-metrics
  selector:
    <<: *labels

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: loki-promtail
  namespace: monitoring
  labels: &labels
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: promtail
spec:
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
      annotations:
        prometheus.io/port: http-metrics
        prometheus.io/scrape: "true"
    spec:
      containers:
        - args:
            - -config.file=/etc/promtail/promtail.yml
            - -client.url=http://loki:3100/api/prom/push
          image: grafana/promtail:v0.3.0
          imagePullPolicy: IfNotPresent
          name: promtail
          ports:
            - containerPort: 3101
              name: http-metrics
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          securityContext:
            readOnlyRootFilesystem: true
            runAsGroup: 0
            runAsUser: 0
          volumeMounts:
            - mountPath: /etc/promtail
              name: config
            - mountPath: /run/promtail
              name: run
            - mountPath: /var/lib/docker/containers
              name: docker
              readOnly: true
            - mountPath: /var/log/pods
              name: pods
              readOnly: true
      serviceAccountName: loki-promtail
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
      volumes:
        - configMap:
            name: loki-promtail
          name: config
        - hostPath:
            path: /run/promtail
          name: run
        - hostPath:
            path: /var/lib/docker/containers
          name: docker
        - hostPath:
            path: /var/log/pods
          name: pods
  updateStrategy:
    type: RollingUpdate

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki
  namespace: monitoring
  labels: &labels
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: loki
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      <<: *labels
  serviceName: loki
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      containers:
        - args:
            - -config.file=/etc/loki/loki.yml
          image: grafana/loki:v0.3.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 45
          name: loki
          ports:
            - containerPort: 3100
              name: http-metrics
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 45
          resources:
            limits: &resources
              cpu: 100m
              memory: 2Gi
            requests:
              <<: *resources
          securityContext:
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /etc/loki
              name: config
            - mountPath: /data
              name: storage
              subPath: null
      nodeSelector: {}
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
      serviceAccountName: loki
      terminationGracePeriodSeconds: 30
      tolerations: []
      volumes:
        - name: config
          secret:
            secretName: loki
  volumeClaimTemplates:
    - metadata:
        name: storage
        labels:
          <<: *labels
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 20Gi
  updateStrategy:
    type: RollingUpdate
