k8s/guardians/monitoring/node-exporter.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels: &labels
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/component: node-exporter
  name: node-exporter
  namespace: monitoring
  annotations:
    fluxcd.io/tag.node-exporter: semver:~0
    fluxcd.io/automated: "true"
spec:
  selector:
    matchLabels:
      <<: *labels
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      serviceAccountName: node-exporter
      containers:
        - name: node-exporter
          image: prom/node-exporter:v0.18.1
          args:
            - --path.procfs=/host/proc
            - --path.sysfs=/host/sys
          ports:
            - name: metrics
              containerPort: 9100
              hostPort: 9100
          resources:
            limits:
              cpu: 200m
              memory: 50Mi
            requests:
              cpu: 100m
              memory: 30Mi
          volumeMounts:
            - name: proc
              mountPath: /host/proc
              readOnly: true
            - name: sys
              mountPath: /host/sys
              readOnly: true
      hostNetwork: true
      hostPID: true
      volumes:
        - name: proc
          hostPath:
            path: /proc
        - name: sys
          hostPath:
            path: /sys

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  labels: &labels
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/component: node-exporter
  name: node-exporter
  namespace: monitoring
spec:
  clusterIP: None
  ports:
    - name: metrics
      port: 9100
      protocol: TCP
      targetPort: 9100
  selector:
    <<: *labels
