k8s/guardians/monitoring/pushgateway.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels: &labels
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/component: pushgateway
  name: pushgateway
  namespace: monitoring
spec:
  selector:
    matchLabels:
      <<: *labels
  replicas: 2
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      serviceAccountName: pushgateway
      containers:
        - name: pushgateway
          image: prom/pushgateway:v0.8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9091
          readinessProbe:
            httpGet:
              path: /#/status
              port: 9091
            initialDelaySeconds: 10
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 10m
              memory: 32Mi
            requests:
              cpu: 10m
              memory: 32Mi
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/probe: pushgateway
  labels: &labels
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/component: pushgateway
  name: pushgateway
  namespace: monitoring
spec:
  ports:
    - name: http
      port: 9091
      protocol: TCP
      targetPort: 9091
  selector:
    <<: *labels
  type: ClusterIP
