k8s/guardians/monitoring/prometheus.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    prometheus: k8s
  name: prometheus-k8s
  namespace: monitoring
spec:
  ports:
    - name: web
      port: 9090
      targetPort: web
  selector:
    app: prometheus
    prometheus: k8s

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-http
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/component: server
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`prometheus.metrics.hannahs.family`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: default
      services:
        - name: prometheus-k8s
          port: 9090

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-https
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/component: server
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`prometheus.metrics.hannahs.family`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy
          namespace: default
      services:
        - name: prometheus-k8s
          port: 9090
  tls:
    certResolver: default
